# circom2llvm

./: .gitignore  Cargo.toml  LessThanMain2.json  LessThanMain2.ll  README.md  detect.py  merge_results.py
auditing/: bigint.json  bigint.ll  bigint.ssa.ll  bigint_func.json  bigint_func.ll  bls12_381_hash_to_G2.json  bls12_381_hash_to_G2.ssa.ll  bls_signature.json  bls_signature.ssa.ll  curve.json  curve.ll  curve_fp2.json  field_elements_func.json  final_exp.json  final_exp.ll  fp.json  fp.ssa.ll  fp12.ll  fp2.ll  fp2.ssa.ll
cache/: bigint.json  bigint.ll  bigint_func.json  bigint_func.ll  bigint_unfixed_version.ll  bls12_381_func.json  bls12_381_func.ll  bls12_381_hash_to_G2.json  bls12_381_hash_to_G2.ll  bls_signature.json  cache.ll  curve.json  curve.ll  curve_fp2.json  curve_fp2.ll  extra_curve.json  extra_field_circuits.json  extra_field_circuits.ll  field_elements_func.json  field_elements_func.ll  final_exp.json  final_exp.ll  fp.json  fp.ll  fp12.json  fp12.ll  fp12_func.json  fp12_func.ll  fp2.json  fp2.ll  pairing.json
circom2llvm/: Cargo.toml
detect_templates/: Cargo.toml
detect_templates/src/: main.rs
detectors/: ArrayShapes.cpp  ArrayShapes.hpp  CMakeLists.txt  InfoCollector.cpp  InfoCollector.hpp  OutputSignalUser.cpp  OutputSignalUser.hpp  UnderConstraints.cpp  UnderConstraints.hpp
example_detector/: CMakeLists.txt  InfoCollector.cpp  InfoCollector.hpp  README.md  UnderConstraints.cpp  UnderConstraints.hpp  bits2num.circom  bits2num.json  bits2num.ll  bug.ll  detect.py  example_bug.ll  example_nobug.ll  test.circom
ir_generator/: Cargo.toml
(+209 files in other folders)
