[package]
name = "detect_templates"
version = "0.1.0"
edition = "2021"

[dependencies]
ir_generator = {path = "../ir_generator"}
parser = {path = "../parser"}
program_structure = {path = "../program_structure"}
inkwell = { git = "https://github.com/TheDan64/inkwell", branch = "master", features = ["llvm13-0"] }
clap = { version = "4.0.18", features = ["derive"] }
serde_with = "2.0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
